# detr_segmentation

./: Dockerfile  README.md  cloudbuild.sh  cloudbuild.yaml  docker.sh  package.xml  setup.cfg  setup.py
.github/workflows/: build.yaml
detr_seg/: detr_seg.py
