<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detr_seg_ros2</name>
  <version>0.0.0</version>
  <description>DEtection TRansformer (DETR) introduces a set-based global 
  loss that forces unique predictions via bipartite matching, 
  and a transformer encoder-decoder architecture. 
  Given a fixed small set of learned object queries, DETR reasons about the relations of 
  the objects and the global image context to directly output the final set of predictions in parallel. 
  The new model is conceptually simple and does not require a specialized library, 
  unlike many other modern detectors. We attach a semantic segmentation head.</description>
  <maintainer email="support@shaderobotics.com">Shade Robotics</maintainer>
  <license>apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend></depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
